--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 <body>
   <div class="card">
     <h1> Get Well Soon, My Love 🥺❤️</h1>
-    <p>You’re the strongest person I know.</p>
-    <p>I miss you 🤧❤️</p>
+    <p>I miss your smile already😔 </p>
+    <p>Get well soon,my baby🥺❤️.</p>
     <button class="btn" onclick="playSong()">Click on me😊</button>
   </div>
 
