--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     function createHeart() {
       const heart = document.createElement("div");
       heart.classList.add("heart");
-      heart.innerHTML = "♦️";
+      heart.innerHTML = "💖";
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = Math.random() * 20 + 20 + "px";
       heart.style.animationDuration = Math.random() * 3 + 3 + "s";
